--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,10 @@
         }
     },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [5432],
+    "forwardPorts": [
+        22,
+        5432
+    ],
     // Use 'postCreateCommand' to run commands after the container is created.
     // "postCreateCommand": "go version",
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
