--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@ url = git@github.com:topheruk-go/book-catalogue
 [submodule "util"]
 path = util
 url = git@github.com:topheruk-go/util
+[submodule "isbn"]
+	path = isbn
+	url = git@github.com:topheruk-go/isbn.git
